<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/bwTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/bw" />

    <Button
        android:id="@+id/mdrButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:nextFocusDown="@+id/resetButton"
        android:text="@string/mdrCalculate" />

    <EditText
        android:id="@+id/snrEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mdrButton"
        android:layout_alignLeft="@+id/mdrButton"
        android:ems="10"
        android:hint="@string/snrHint"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/mdrButton"
        android:paddingBottom="15dp" />

    <EditText
        android:id="@+id/bwEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/snrEditText"
        android:layout_below="@+id/bwTextView"
        android:ems="10"
        android:hint="@string/bwHint"
        android:inputType="numberDecimal"
        android:nextFocusDown="@id/snrEditText"
        android:paddingBottom="15dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/snrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/snrEditText"
        android:layout_alignLeft="@+id/bwTextView"
        android:paddingBottom="10dp"
        android:text="@string/snr" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mdrTextView"
        android:layout_toRightOf="@+id/snrTextView"
        android:nextFocusDown="@+id/bwEditText"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/mdrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/resetButton"
        android:layout_below="@+id/mdrButton"
        android:layout_marginTop="65dp"
        android:nextFocusDown="@+id/resetButton"
        android:text="@string/mdrFormat" />

</RelativeLayout>
